--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 # DataSource settings:
-spring.datasource.url = jdbc:mysql://localhost:3306/course
+spring.datasource.url = jdbc:mysql://localhost:8080/inventory
 spring.datasource.username = root
 spring.datasource.password = student
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
